--- a/app/src/main/res/layout/but3.xml
+++ b/app/src/main/res/layout/but3.xml
@@ -6,15 +6,6 @@
     android:background="@drawable/bg_shape"
     tools:context=".MainActivity">
 
-    <Switch
-        android:id="@+id/separation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="破解的是分身吗？"
-        android:thumb="@drawable/switch_custom_thumb_selector"
-        android:track="@drawable/switch_custom_track_selector" />
-    
     <LinearLayout
         android:id="@+id/line1"
         android:layout_width="wrap_content"
@@ -44,5 +35,15 @@
             android:layout_marginLeft="10dp"
             android:text="返回" />
     </LinearLayout>
-    
+
+    <Switch
+        android:id="@+id/separation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="破解的是分身吗？"
+        android:thumb="@drawable/switch_custom_thumb_selector"
+        android:track="@drawable/switch_custom_track_selector"
+        android:visibility="gone" />
+
 </RelativeLayout>
