--- a/app/src/main/res/layout/qqsz.xml
+++ b/app/src/main/res/layout/qqsz.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
 
-    <androidx.recyclerview.widget.RecyclerView
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/RecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
